# entity-mini

./: .gitignore  CMakeLists.txt  ECS.cpp  ECS.h  LICENSE  README.md
inc/: ECS.h  c_abstract.h
logger/: log.cpp  log.h  log_cfg.h
src/: ECS.cpp  ECS.h
